fixed spacing, the back button on the pbibacklog display is no longer working

--- a/react-practice/src/App.css
+++ b/react-practice/src/App.css
@@ -88,7 +88,7 @@ table {
 }
 
 .halfSizeButton{
-  width: 20%;
+  width: 10%;
 }
 
 #EditPBIBackground{
